# MTracks

./: .gitignore  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  index.html  package.json  svelte.config.js  tailwind.config.ts  vite.config.js
.github/: Release.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: Dev_build.yml  Release.yml
src/: app.css  app.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: audio_devices.rs  lib.rs  main.rs  settings.rs  songs.rs
src-tauri/src/songs/: song_db.rs
src/lib/: songs.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/settings/: +layout.svelte  +page.svelte
src/routes/settings/audio/: +page.svelte
src/routes/songs/: +page.svelte
src/routes/songs/[title]/: +page.svelte
src/routes/songs/[title]/edit/: +layout.svelte  +page.svelte
src/routes/songs/song/: +page.svelte
src/routes/songs/song/edit/: +layout.svelte
