        [package]
name = "mtracks"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mtracks_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc.10", features = [] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rodio = "0.19.0"
cpal = { version = "0.15", features = ["jack", "asio"] }
dirs-next = "2.0.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }


